增加温湿度接口，创建生鲜产品的时候增加温湿度

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,6 +18,8 @@ user.default.password=123456
 
 origin.base=http://localhost:8685
 
+mybatis.type-aliases-package=com.chef.assist.model
+mybatis-plus.mapper-locations= classpath:mapper/*.xml
 mybatis.configuration.map-underscore-to-camel-case=true
 
 default.page.size=100
@@ -27,4 +29,5 @@ base.service.url=http://localhost:8686
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-#第一次测试提交
+#后台输出sql语句
+mybatis.configuration.log-impl = org.apache.ibatis.logging.stdout.StdOutImpl
