--- a/pom.xml
+++ b/pom.xml
@@ -85,17 +85,24 @@
 			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>2.3</version>
 		</dependency>
-		<dependency>
-			<groupId>com.baomidou</groupId>
-			<artifactId>mybatis-plus-generate</artifactId>
-			<version>2.3</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.baomidou</groupId>-->
+<!--			<artifactId>mybatis-plus-generate</artifactId>-->
+<!--			<version>2.3</version>-->
+<!--		</dependency>-->
+
+<!--		<dependency>-->
+<!--			<groupId>org.freemarker</groupId>-->
+<!--			<artifactId>freemarker</artifactId>-->
+<!--			<version>2.3.28</version>-->
+<!--		</dependency>-->
 
 		<dependency>
-			<groupId>org.freemarker</groupId>
-			<artifactId>freemarker</artifactId>
-			<version>2.3.28</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+<!--			<version>2.5.3</version>-->
 		</dependency>
+
 
 	</dependencies>
 
