--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,18 @@
 <!--			<version>2.5.3</version>-->
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>com.alibaba</groupId>-->
+<!--			<artifactId>fastjson</artifactId>-->
+<!--			<version>1.2.54</version>-->
+<!--		</dependency>-->
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.4</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+
 
 	</dependencies>
 
