--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,13 @@
 			<classifier>jdk15</classifier>
 		</dependency>
 
-
+        <!--		JUnit 单元测试-->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
