--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=8989
 
 spring.datasource.url=jdbc:mysql://localhost:3306/chef_assist?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf8&&allowMultiQueries=true&serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=50
 spring.datasource.tomcat.max-idle=20
